--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@shadcn/ui": "^0.0.4",
+    "@tanstack/react-query": "^5.62.0",
+    "@tanstack/react-query-devtools": "4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.462.0",
